@@ -1,6 +1,9 @@
 centralityPlot <- function(..., labels, scale = c("z-scores", "raw", "raw0","relative"), 
                            include = c("Degree","Strength","OutDegree","InDegree","OutStrength","InStrength","Closeness","Betweenness"), theme_bw = TRUE, print = TRUE,
-                           verbose = TRUE, standardized, relative, weighted = TRUE, signed = TRUE)
+                           verbose = TRUE, standardized, relative, weighted = TRUE, signed = TRUE,
+                           orderBy = "default", # Can also be one of the measures
+                           decreasing = FALSE
+)
 {
   scale <- match.arg(scale)
   if (!missing(standardized)){
@@ -32,19 +35,32 @@ centralityPlot <- function(..., labels, scale = c("z-scores", "raw", "raw0","rel
   ## programming is bad and I fo feel bad.
   
   Long <- centralityTable(..., standardized=standardized, labels=labels, relative=relative, weighted = weighted, signed = signed)
-
+  
   # If not missing, include only include vars:
   # if (!missing(include))
   # {
-    Long <- subset(Long, measure %in% include)
+  Long <- subset(Long, measure %in% include)
   # }
   
-    # Re-order:
-    Long$measure <- factor(Long$measure,levels = include)
-
+  # Re-order:
+  Long$measure <- factor(Long$measure,levels = include)
+  
   # Ordereing by node name to make nice paths:
-  Long <- Long[gtools::mixedorder(Long$node),] 
-  Long$node <- factor(as.character(Long$node), levels = unique(gtools::mixedsort(as.character(Long$node))))
+  if (orderBy == "default"){
+    nodeLevels <- unique(gtools::mixedsort(as.character(Long$node), decreasing = decreasing))
+  } else {
+    nodeLevels <- Long$node[Long$measure == orderBy][order(Long$value[Long$measure == orderBy], decreasing = decreasing)]
+  }
+  Long$node <- factor(as.character(Long$node), levels = nodeLevels)
+  Long <- Long[gtools::mixedorder(Long$node),]
+  # 
+  #      Long <- Long[gtools::mixedorder(Long$node),] 
+  #      Long$node <- factor(as.character(Long$node), levels = unique(gtools::mixedsort(as.character(Long$node))))
+  #    } else {
+  # 
+  #      Long <- Long[gtools::mixedorder(Long[[orderBy]]),] 
+  #      Long$node <- factor(as.character(Long$node), levels = unique(gtools::mixedsort(as.character(Long$node))))
+  #    }
   
   # PLOT:
   if (length(unique(Long$type)) > 1)
@@ -67,7 +83,7 @@ centralityPlot <- function(..., labels, scale = c("z-scores", "raw", "raw0","rel
   if (theme_bw){
     g <- g + theme_bw()
   }
-
+  
   if (scale == "raw0"){
     g <-g + xlim(0,NA)
   }
